closed/java/awt/MenuBar/MenuBarStress1/MenuBarStress1.java hangs on win 64 bit with jdk8

XMLWordPrintable

    • b68
    • x86
    • windows

        test closed/java/awt/MenuBar/MenuBarStress1/MenuBarStress1.java failed on windows 64 bit with jdk 8, passed with 7u4b15 on same machine, passed with jdk 8 on solaris and linux

        test machines:
        stt-62.ru, stt-44.ru - win xp 64 bit
        stt-67.ru - win 2008 64 bit

        see comments for more details

              Assignee:
              Semyon Sadetsky (Inactive)
              Reporter:
              Vera Akulova (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: